<resources>
    <string name="app_name">CarsHiring</string>
    <string name="checkInternet">Check Your Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="wantExit">Do you want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_home">CarsHiring</string>
    <string name="permissionsetting">Please enable all Permissions. </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome">Welcome To CarsHiring</string>
    <string name="action_search_car">Book a car</string>
    <string name="action_accounts">My Accounts</string>
    <string name="action_my_booking">My Bookings</string>
    <string name="action_about_us">About Us</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="action_terms">Terms &amp; Conditions</string>
    <string name="action_language">Language</string>
    <string name="action_currency">Currency</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="language">Choose your language</string>
    <string name="thankyou">Thank You</string>
    <string name="Welcome">Welcome! Please sign in...</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="sign_in">Login</string>
    <string name="SignUpAccount">Sign up for an account</string>
    <string name="login_forgetpassord">Forgotten your password?</string>
    <string name="title_forgetpassword">Forgotten Password</string>
    <string name="forgotpassword">Enter your email to recover password</string>
    <string name="recoverpassword">Recover My Password</string>
    <string name="title_create_account">Create Account</string>
    <string name="update_profile_txt">Welcome! Please update your profile...</string>
    <string name="car_results">Car List</string>
    <string name="filter">Filter</string>
    <string name="sort">Search By Map</string>
    <string name="BookingCurrent">You can add a booking manually\n or search for a car now.</string>
    <string name="Searchnow">Search Now</string>
    <string name="bookingreferencenumber">Booking Reference Number</string>
    <string name="bookingstatus">Booking Status</string>
    <string name="book_today">Book today to aviod disapointment</string>
    <string name="viewFaq">View our Frequently Asked Questions\n on our website</string>
    <string name="search">Search</string>
    <string name="mybooking">My Booking</string>
    <string name="myProfile">Account details</string>
    <string name="accountdetails">Settings</string>
    <string name="changepass">Change Password</string>
    <string name="bookingHistory">Booking History</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="login">Login</string>
    <string name="title">Title</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phnumb">Phone</string>
    <string name="currentpass">Enter Current Password</string>
    <string name="newpass">Enter New Password</string>
    <string name="confirmpass">Confirm New Password</string>
    <string name="passport">Passport No</string>
    <string name="switch_save">Save the driver details for next time</string>
    <string name="nevermiss">Never miss a bargain again-for exclusive deals and offers,sign up to our newsletter.</string>
    <string name="interphnum">International Phone Number</string>
    <string name="usanumb">From The USA</string>
    <string name="faq">FAQs</string>
    <string name="pick_up_location">Select Location</string>
    <string name="bookinginvoicenumber">Booking Invoice Number</string>
    <string name="aboutus">At Carshiring everything we do is about giving you the freedom to discover more. We’ll move mountains to find you the right rental car, and bring you a smooth, hassle-free experience from start to finish. Here you can find out more about how we work.</string>
    <string name="cardnumb">Card Number</string>
    <string name="car_book">Book this car</string>
    <string name="car_details">Car Details</string>
    <string name="car_feature">Car Features</string>
    <string name="cardname">Card Holder Name</string>
    <string name="date">MM/YY</string>
    <string name="Cv">CVV</string>
    <string name="country">Country</string>
    <string name="zipcode">Zip Code</string>
    <string name="sorted_by">Sorted By</string>
    <string name="recommended">Recommended</string>
    <string name="price_l_to_h">Price (Low to High)</string>
    <string name="price_h_to_l">Price (High to Low)</string>
    <string name="rating">Rating</string>
    <string name="car_group">Car Group</string>
    <string name="dummy">You have emailed your quote to you. Your booking reference number is </string>
    <string-array name="selectlanguage">
        <item>Select Language</item>
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="Titles">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Miss</item>
        <item>Ms</item>
        <item>Dr</item>
    </string-array>
    <string-array name="numbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>
    <string-array name="countries">
        <item>Saudi Arabia</item>
        <item>Qatar</item>
        <item>India</item>
        <item>UAE</item>
        <item>UK</item>
    </string-array>
    <string name="bookProtection1">Go to book with \n Standard Coverage</string>
    <string name="bookProtection2">Go to book with \n Full Protection</string>
    <string name="reset">Reset</string>
    <string name="applyfilters">Apply Filters</string>
    <string name="usepointvalue">Do you want to use your credit balance"</string>
    <string name="txtSearchACar">Search for car hire</string>
    <string name="txtFindCheapCar">Find cheap car hire at worldwide locations</string>
    <string name="txtUseMyLocation">Use My Location</string>
    <string name="edtPickUp">Pick-up Location</string>
    <string name="edtDropUp">Drop-off</string>
    <string name="switchRetrunSameLoc">Return to same location</string>
    <string name="txtDate">Date</string>
    <string name="txtTime">Time</string>
    <string name="txtDriveAge">Driver&#39;s Age</string>
    <string name="switchDriverAgebw">Driver Age between 25 - 65?</string>
    <string name="switchSearchMap">Search By map</string>
    <string name="edtDriverAge">Enter driver age</string>
    <string name="licenseno">License No</string>
    <string name="licenseorigion">License Origin</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="txtLicense">بلد اصدار الرخصة القيادة</string>
    <string name="txtDriverLicenseNo">رقم رخصة القيادة</string>
    <string name="txtAccessProtection">FULL PROTECTION FOR YOUR RELAXATION</string>
    <string name="txtAccessProtectionTerm">What is covered</string>
    <string name="txtExtra">Do You need any extras with\n your carshiring</string>
    <string name="edtAmt">Enter Amount</string>
    <string name="txtPaymentMethod">Payment Methods</string>
    <string name="txtPayWithCard">Pay with Credit Cards</string>
    <string name="txtQuots">Quotes</string>
    <string name="txtAirCond">Air conditioning</string>
    <string name="txtPointCollected">Points Collected:</string>
    <string name="txtPickUp">PickUp</string>
    <string name="txtDropUp">Drop off</string>
    <string name="update">Save</string>
    <string name="surname">Sur Name</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="txtSettings">Settings Car Search</string>
    <string name="txtMiles">miles</string>
    <string name="txtViewQuotes">View Quotes</string>
    <string name="txtSupplierDetails">Your Supplier Details</string>
    <string name="txtOpeningTime">Opening Times</string>
    <string name="txtSupplierinfo">Supplier Information</string>
    <string name="txtSave">Save and Quote</string>
    <string name="txtSuppLoc">Supplier Location</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_u_a">Are you a ?</string>
    <string name="supplier">Supplier</string>
    <string name="pvt_co_hire_car">Pvt. Co. hire car</string>
    <string name="general_query">General Query</string>
    <string name="state">State</string>
    <string name="branch">Branch</string>
    <string name="no_of_admin">No. of admins</string>
    <string name="no_of_cars">No. of cars</string>
    <string name="code">Code</string>
    <string name="enter_your_query_here">Enter your query here</string>
    <string name="txtmybooking">My Booking</string>
    <string name="txtCurrent">Current</string>
    <string name="txtPrevious">Previous</string>
    <string name="txtQuotes">Quotes</string>
    <string name="title_account_details">Account Details</string>
    <string name="excess_prot">Excess Protection</string>
    <string name="select_extras">Select Your Extras</string>
    <string name="full_protection">Full Protection</string>
    <string name="select_loc">Select Location</string>
    <string name="quote">Quote</string>
    <string name="change_your_password">Change your password</string>
    <string name="sign_out">Sign Out</string>
    <string name="txtEnterLoc">Enter Your Location</string>
    <string name="gps_sett">GPS is settings</string>
    <string name="gps_not_enabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="cancle">Cancel</string>
    <string name="enter_email_pass">Please Enter username and Password.</string>
    <string name="enter_uname">Please Enter Username</string>
    <string name="enter_pass">Please Enter Password</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="pass_doesnotmatch">Password and Confirm Passwo d does not match.</string>
    <string name="fill_all_field">Please Fill all fields</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_pass">Please enter Password</string>
    <string name="please_enter_confirm_pass">Please enter Confirm Password</string>
    <string name="add_extra">Add These Extras</string>
    <string name="extra_added">Extras added</string>
    <string name="full_protection_only">Full Protection Only </string>
    <string name="full_day"> For Day</string>
    <string name="colletcted_point">Collected point: </string>
    <string name="or_similar"> or Similar</string>
    <string name="price">Price : </string>
    <string name="sub_total">Subtotal: </string>
    <string name="book_this_car">Book this Car</string>
    <string name="txtOrSimilar">or Similar</string>
    <string name="error">Error</string>
    <string name="no_filters_applied">No Filters Applied</string>
    <string name="drvlncno">Driving LIC-id</string>
    <string name="txtwallet">Wallet Amount</string>
    <string name="txtMyPoint">My points</string>
    <string name="txtCredit">Credit</string>
    <string name="txtDebit">Debit</string>
</resources>