<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:padding="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_profile_txt"
        android:gravity="center"
        android:id="@+id/login_welcome"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_above="@+id/update_profile_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/update_profile_scroll">
        <LinearLayout
            android:id="@+id/linear_part"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:textSize="13sp"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/etUserFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/simpleRectangle"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1">
            </EditText>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textSize="13sp"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/etUserLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/simpleRectangle"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" >
            </EditText>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateofbirth"
                android:textSize="13sp"
                android:textColor="#000"/>
            <TextView
                android:id="@+id/etUserDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/simpleRectangle"
                android:layout_marginTop="2dp"
                android:drawableRight="@drawable/ic_calendar"
                android:layout_marginBottom="3dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="13sp"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/etUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/simpleRectangle"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"  >
            </EditText>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phnumb"
                android:textSize="13sp"

                android:textColor="#000"/>
            <EditText
                android:id="@+id/etUserPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/simpleRectangle"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:maxLines="1">
            </EditText>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zipcode"
            android:textSize="13sp"
            android:textColor="#000"/>
            <EditText
                android:id="@+id/etUserzip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/simpleRectangle"
                android:layout_marginTop="2dp"
                android:paddingBottom="5dp"
                android:maxLength="6"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:maxLines="1"
                >
            </EditText>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/licenseno"
            android:textSize="13sp"
            android:textColor="#000"/>
            <EditText
                android:id="@+id/etlicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/simpleRectangle"
                android:layout_marginTop="2dp"
                android:paddingBottom="5dp"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:maxLines="1"
                >
            </EditText>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/licenseorigion"
            android:textSize="13sp"
            android:textColor="#000"/>
            <EditText
                android:id="@+id/etlicenseorigion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/simpleRectangle"
                android:layout_marginTop="2dp"
                android:paddingBottom="5dp"
                android:imeOptions="actionNext"
                android:maxLines="1"
                >
            </EditText>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="13sp"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/etcity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/simpleRectangle"
                android:layout_marginTop="2dp"
                android:paddingBottom="5dp"
                android:imeOptions="actionDone"
                android:maxLines="1"
                >
            </EditText>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="13sp"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/simpleRectangle"
                android:layout_marginTop="2dp"
                android:paddingBottom="5dp"
                android:imeOptions="actionDone"
                android:maxLines="1"
                >
            </EditText>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/update_profile_bottom"
        android:orientation="horizontal"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update"
            android:textColor="@color/white"
            style="@style/GreenButtonTheme"
            android:id="@+id/bt_update"
            android:layout_marginRight="3dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"
            android:textColor="@color/white"
            style="@style/GreenButtonTheme"
            android:id="@+id/bt_cancel"
            android:layout_marginRight="3dp"
            />

    </LinearLayout>
    </RelativeLayout>
</LinearLayout>