<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="18dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/simpleRectangle"
            android:layout_marginTop="7dp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_blue_arrow"
            android:drawableStart="@drawable/ic_blue_arrow"
            android:hint="@string/cardnumb"
            />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cardnumb"
        android:textSize="13sp"
        android:textColor="#000"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/simpleRectangle"
        android:layout_marginTop="7dp"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLines="1"
        android:drawableLeft="@drawable/ic_blue_arrow"
        android:drawableStart="@drawable/ic_blue_arrow"
        >
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginTop="7dp"
        android:textSize="13sp"
        android:textColor="#000"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/simpleRectangle"
        android:layout_marginTop="7dp"
        android:imeOptions="actionNext"
        android:inputType="date"
        android:maxLines="1"
        android:drawableRight="@drawable/ic_blue_arrow"
        android:drawableEnd="@drawable/ic_blue_arrow"
        >
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cv"
        android:layout_marginTop="7dp"
        android:textSize="13sp"
        android:textColor="#000"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/simpleRectangle"
        android:layout_marginTop="7dp"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="number"
        android:drawableRight="@drawable/ic_blue_arrow"
        android:drawableEnd="@drawable/ic_blue_arrow"
        >
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textSize="13sp"
        android:textColor="#000" android:layout_marginTop="7dp"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        style="@style/SpinnerTheme"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zipcode"
        android:textSize="13sp"
        android:layout_marginTop="7dp"
        android:textColor="#000"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/simpleRectangle"
        android:layout_marginTop="7dp"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:inputType="number"
        >
    </EditText>
</LinearLayout>