<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    tools:context="com.carshiring.activities.home.UserDashActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:id="@+id/dash_profile_wal"
                android:background="@drawable/a">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dash_profile_edit"
                    android:paddingBottom="10dp"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_edit"
                    android:layout_gravity="top|right"
                    android:onClick="icon_update"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/dash_profile_img"
                    android:paddingBottom="10dp"
                    android:layout_gravity="bottom|center" />

            </FrameLayout>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="@dimen/extra_large_size"
                android:textColor="@color/black"
                android:id="@+id/dash_profile_txtName"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:padding="10dp"
                android:background="@drawable/border_bg"
                android:textSize="@dimen/small_size"
                android:textColor="@color/black"
                android:id="@+id/dash_profile_txtemail"/>
            <TextView
                android:layout_marginTop="10dp"
                android:background="@drawable/border_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:padding="10dp"
                android:textSize="@dimen/small_size"
                android:textColor="@color/black"
                android:id="@+id/dash_profile_txtPhn"/>
            <TextView
                android:layout_marginTop="10dp"
                android:background="@drawable/border_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drvlncno"
                android:padding="10dp"
                android:textSize="@dimen/small_size"
                android:textColor="@color/black"
                android:id="@+id/dash_profile_txtDrivingLnc"/>
            <LinearLayout
                android:id="@+id/wallet_lay"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bg"
                android:orientation="vertical"
                android:onClick="walletView">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtwallet"
                    android:padding="10dp"
                    android:textSize="@dimen/small_size"
                    android:textColor="@color/black"
                    android:id="@+id/dash_profile_WalletAmt"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="00.00"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/dash_profile_txtWalletValue"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/point_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bg"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="walletView">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/txtMyPoint"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:textSize="@dimen/small_size"
                        android:textColor="@color/black"
                        android:id="@+id/dash_profile_txtpoint"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="00.00"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:textSize="@dimen/small_size"
                        android:textColor="@color/black"
                        android:id="@+id/dash_profile_txtpointValue"/>

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCredit"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/dash_profile_txtcredit"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtDebit"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/dash_profile_txtDebit"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
